项目初始化&添加部署文档
Signed-off-by: pengxu <x@wakedata.com>